--- a/src/GMLClient/frontClient/src/manager_index.html
+++ b/src/GMLClient/frontClient/src/manager_index.html
@@ -367,6 +367,35 @@
                         }
                     })
                 } else if (index == 2) {
+                    //获取条件类型信息
+                    getAllConditionTypeInfo((data, err) => {
+                        if (data != null) {
+                            if (data.code == "0") {
+                                conditionTypeInfoMap = {};
+                                let arr = data.data;
+                                arr.forEach((v, i) => {
+                                    conditionTypeInfoMap[v.id] = v
+                                })
+                                //获取所有的条件信息
+                                getAllConditionInfo(0, 100000, (data, err) => {
+                                    if (data != null) {
+                                        if (data.code == "0") {
+                                            conditionArr = makeConditionInfo(data.data);
+                                        } else {
+                                            console.error(err)
+                                        }
+                                    } else {
+                                        console.error(err)
+                                    }
+                                })
+                            } else {
+                                console.error(data.msg);
+                            }
+                        } else {
+                            console.error(err);
+                        }
+                    })
+
                     //调用“获取全部策略接口”
                     getAllStrategyCategroy((data, err) => {
                         if (data != null) {
@@ -395,6 +424,28 @@
             })
             ele.tabChange('mainTab', 'mUser');//默认选择第一选项"用户管理"
         });
+
+        /**
+         * 加载策略内容信息path
+        */
+        function loadStrategyContent(path) {
+            $.ajax({
+                url: path.replace("./", staticResourceDomain),
+                data: {
+                    t: new Date().valueOf()
+                },
+                dataType: "json",
+                method: "GET",
+                success: function (data) {
+                    if (data) {
+                        strategyContentMap[path] = data;//填充策略类型模板字典
+                    }
+                },
+                error: function (err) {
+                    console.error(err);
+                }
+            })
+        }
 
         /**
          * 加载策略类型模板
@@ -1180,13 +1231,43 @@
             switch (execType) {
                 case "zhedie":
                     tmpId = "strategyContentList_" + sid;
-                    document.getElementById(tmpId).style.display = "none";
-                    sender.innerHTML = "&#xe619;";
-                    sender.setAttribute("execType", "zhankai");
+                    document.getElementById(tmpId).style.display = "block";
+                    sender.innerHTML = "&#xe63d;";
+                    sender.setAttribute("execType", "");
+                    //调用“获取全部策略接口”
+                    getStrategyByStrategyCategroyID(sid, (data, err) => {
+                        sender.innerHTML = "&#xe619;";
+                        sender.setAttribute("execType", "zhankai");
+                        if (data != null) {
+                            if (data.code == "0") {
+                                let arr = data.data;
+                                arr.forEach((v, i) => {
+                                    //增量更新
+                                    let sItem = {};
+                                    sItem.conditionGroup = v.conditionGroup;
+                                    sItem.enabled = v.enabled;
+                                    sItem.expireDate = v.expireDate;
+                                    sItem.id = v.id;
+                                    sItem.name = v.name;
+                                    sItem.sid = v.sid;
+                                    sItem.valuePath = v.valuePath;
+                                    strategyMap[sItem.id] = sItem;
+                                    if (!!strategyContentMap[sItem.valuePath] == false)
+                                        loadStrategyContent(sItem.valuePath);//加载策略内容
+                                })
+                                //更新显示列表
+                                fillStrategyList(sid);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        } else {
+                            console.error(err)
+                        }
+                    })
                     break;
                 case "zhankai":
                     tmpId = "strategyContentList_" + sid;
-                    document.getElementById(tmpId).style.display = "block";
+                    document.getElementById(tmpId).style.display = "none";
                     sender.innerHTML = "&#xe61a;";
                     sender.setAttribute("execType", "zhedie");
                     break;
@@ -1212,7 +1293,18 @@
          * 当策略item上的按钮被点击
         */
         function onStrategyItem_btn_Click(sender) {
-            console.log(sender.getAttribute("execType"));
+            let type = sender.getAttribute("execType")
+            let strategyId = parseInt(sender.getAttribute("sid"));
+            let strategyInfo = strategyMap[strategyId];
+            if (strategyInfo) {
+                switch (type) {
+                    case "editStrategy":
+                        showEditStrategyPanel(strategyInfo.sid,strategyInfo,strategyContentMap[strategyInfo.valuePath]);
+                        break;
+                }
+            }else{
+                layui.alert("未找到对应的策略信息")
+            }
         }
 
         /**
@@ -1426,7 +1518,7 @@
                                     onclick="javascript:void(0);onStrategyTitleBar_btn_Click(this);" execType="des"
                                     sid="`+ sid + `"></i>
                                 <i class="layui-icon" style="float: right;margin-right: 10px;"
-                                    onclick="javascript:void(0);onStrategyTitleBar_btn_Click(this);" execType="zhedie"
+                                    onclick="javascript:void(0);onStrategyTitleBar_btn_Click(this);" id="strategyTitleBar_titleIcon_`+ sid + `" execType="zhedie"
                                     sid="`+ sid + `">&#xe61a;</i>
                                 <span class="strategyTitleBar_btn"
                                     onclick="javascript:void(0);onStrategyTitleBar_btn_Click(this);" execType="edit"
@@ -1443,6 +1535,13 @@
                 listNode.setAttribute("class", "strategyContentList");
                 baseNode.appendChild(titleNode);//添加title
                 baseNode.appendChild(listNode);//添加列表
+            }
+
+            if (selectSid > -1) {
+                let selectedNode = document.getElementById("strategyTitleBar_titleIcon_" + selectSid)
+                if (selectedNode) {
+                    onStrategyTitleBar_btn_Click(selectedNode);//展开选中项
+                }
             }
         }
 
@@ -1512,46 +1611,24 @@
                 ////新增 策略类型
                 let sName = tb_add_SName.value;
                 let sDate = new Date(tb_add_SDate.value).valueOf();
-                if(isNaN(sDate) == false)
+                if (isNaN(sDate) == false)
                     sDate = sDate / 1000;
-                let sIsEnabled = (!!tb_add_SEnabled.checked) ?1:0;
+                let sIsEnabled = (!!tb_add_SEnabled.checked) ? 1 : 0;
                 let reqContext = createStrategyContentByTemplateObj(templateObj);
                 let strategyContext = JSON.stringify(reqContext);
                 // console.log("sName=",sName,"sDate=",sDate,"sIsEnabled=",sIsEnabled,"sid=",sid)
                 // console.log("reqContext=",reqContext)
                 layer.close(openidx);//关闭弹窗
-                addStrategy(sid, strategyContext,sDate,sIsEnabled,sName , (data, err) => {
+                addStrategy(sid, strategyContext, sDate, sIsEnabled, sName, (data, err) => {
                     if (data != null) {
                         if (data.code == "0") {
                             layer.alert("新增策略成功")
                             //更新页面显示
-                            // //调用“获取全部策略接口”
-                            // getAllStrategyCategroy((data, err) => {
-                            //     if (data != null) {
-                            //         if (data.code == "0") {
-                            //             let arr = data.data;
-                            //             arr.forEach((v, i) => {
-                            //                 //增量更新
-                            //                 if (!strategyCategroyMap[v.id]) {
-                            //                     let sc = {};
-                            //                     sc.name = v.name;
-                            //                     sc.id = v.id;
-                            //                     sc.des = v.des;
-                            //                     sc.baseTemplatePath = v.baseTemplatePath;
-                            //                     strategyCategroyMap[sc.id] = sc;
-                            //                     loadStrategyCategroyContent(sc.baseTemplatePath);//加载模板内容
-                            //                 }
-                            //             })
-                            //             //更新显示列表
-                            //             fillStrategyCategroyList();
-                            //         } else {
-                            //             console.error(data.msg);
-                            //         }
-                            //     } else {
-                            //         console.error(err)
-                            //     }
-                            // })
-                        
+                            let selectedNode = document.getElementById("strategyTitleBar_titleIcon_" + sid)
+                            if (selectedNode) {
+                                selectedNode.setAttribute("execType", "zhedie");
+                                onStrategyTitleBar_btn_Click(selectedNode);//展开选中项
+                            }
                         } else {
                             layer.alert("新增策略失败")
                             console.error(data.msg);
@@ -1588,9 +1665,147 @@
             });
         }
 
-        
+        /**
+         * 显示新增策略面板
+        */
+        function showEditStrategyPanel(sid, strategyInfo, strategyContent) {
+            let strategyCategroyObj = strategyCategroyMap[sid] || {};
+            let key = strategyCategroyObj["baseTemplatePath"] || "";
+            let templateObj = strategyCategroyTemplateMap[key];
+            if (templateObj && strategyContent) {
+                reFillStrategyFormByTemplateObjAndStrategyContent(templateObj, strategyContent);//重新填充表单的内容
+            } else {
+                layer.alert("策略模板正在加载中，请稍后重试");
+                return;
+            }
+            let btn_editStrategy_cancel = document.getElementById("btn_editStrategy_cancel");
+            btn_editStrategy_cancel.style.display = "inline-block";
+            let btn_editStrategy_commit = document.getElementById("btn_editStrategy_commit");
+            btn_editStrategy_commit.style.display = "inline-block";
+            let btn_addStrategy_cancel = document.getElementById("btn_addStrategy_cancel");
+            btn_addStrategy_cancel.style.display = "none";
+            let btn_addStrategy_commit = document.getElementById("btn_addStrategy_commit");
+            btn_addStrategy_commit.style.display = "none";
+            form.on("submit(btn_editStrategy_commit)", function (reqData) {
+                //编辑策略信息
+                let sName = tb_add_SName.value;
+                let sDate = new Date(tb_add_SDate.value).valueOf();
+                if (isNaN(sDate) == false)
+                    sDate = sDate / 1000;
+                let sIsEnabled = (!!tb_add_SEnabled.checked) ? 1 : 0;
+                let reqContext = createStrategyContentByTemplateObj(templateObj);
+                let strategyContext = JSON.stringify(reqContext);
+                // console.log("sName=",sName,"sDate=",sDate,"sIsEnabled=",sIsEnabled,"sid=",sid)
+                // console.log("reqContext=",reqContext)
+                layer.close(openidx);//关闭弹窗
+                updateStrategyInfo(strategyInfo.id, strategyContext, sDate, sIsEnabled, sName, (data, err) => {
+                    if (data != null) {
+                        if (data.code == "0") {
+                            layer.alert("更新策略成功")
+                            //更新页面显示
+                            let selectedNode = document.getElementById("strategyTitleBar_titleIcon_" + sid)
+                            if (selectedNode) {
+                                selectedNode.setAttribute("execType", "zhedie");
+                                onStrategyTitleBar_btn_Click(selectedNode);//展开选中项
+                            }
+                        } else {
+                            layer.alert("更新策略失败")
+                            console.error(data.msg);
+                        }
+                    } else {
+                        layer.alert("更新策略失败")
+                        console.error(err);
+                    }
+                })
+                return false;//禁止由于提交表单造成的页面刷新
+            })
+            form.on("submit(btn_editStrategy_cancel)", function (reqData) {
+                //取消修改
+                layer.close(openidx);//关闭弹窗
+                return false;//禁止由于提交表单造成的页面刷新
+            })
 
-       </script>
+            //填充内容
+            let tb_add_SName = document.getElementById("tb_add_SName");
+            let tb_add_SDate = document.getElementById("tb_add_SDate");
+            let tb_add_SEnabled = document.getElementById("tb_add_SEnabled")
+            tb_add_SName.value = strategyInfo.name;
+            tb_add_SDate.value = makeDateTimeStr(new Date(strategyInfo.expireDate * 1000), "yyyy-MM-dd HH:mm:ss");
+            tb_add_SEnabled.checked = (strategyInfo.enabled == 1);
+            form.render(null, "panel_addStrategy");//刷新表单的内容
+
+            //弹出面板
+            let openidx = layer.open({
+                title: "编辑信息",
+                type: 1,
+                area: '590px',
+                content: $('#panel_addStrategy'),
+                resize: false
+            });
+        }
+        /**
+         * 填充 策略信息列表
+        */
+        function fillStrategyList(selectSid) {
+            let sid = parseInt(selectSid);
+            let baseNode = document.getElementById("strategyContentList_" + selectSid);
+            //移除原有的
+            while (baseNode.children.length > 0)
+                baseNode.removeChild(baseNode.children[0]);
+            //填充新的
+            let strategyItem = null, sgy = null, strategyItem_left = null, strategyItem_bottom = null, strategyItem_right = null, eDate = null;
+            for (k in strategyMap) {
+                sgy = strategyMap[k];
+                if (sgy.sid == sid) {
+                    eDate = new Date(sgy.expireDate * 1000);
+                    strategyItem = document.createElement("div");
+                    strategyItem.setAttribute("id", "strategyListItem_" + k)
+                    strategyItem.setAttribute("class", "strategyListItem");
+                    strategyItem_left = document.createElement("div");
+                    strategyItem_left.setAttribute("class", "strategyListItem_left");
+                    strategyItem_left.innerHTML = `<div>
+                                        <label class="gml_label">策略名</label>
+                                        <label class="gml_label_v">`+ sgy.name + `</label>
+                                    </div>
+                                    <div>
+                                        <label class="gml_label">过期时间</label>
+                                        <label class="gml_label_v">`+ makeDateTimeStr(eDate, "yyyy-MM-dd HH:mm:ss") + `</label>
+                                    </div>
+                                    <div>
+                                        <label class="gml_label">是否启用</label>
+                                        <label class="gml_label_v">`+ (sgy.enabled == 1 ? "使用中" : "已禁用") + `</label>
+                                    </div>`
+                    strategyItem_right = document.createElement("div");
+                    strategyItem_right.setAttribute("class", "strategyListItem_right");
+                    strategyItem_right.innerHTML = `<div class="strategyListItem_right_btn"
+                                        onclick="javascript:void(0);onStrategyItem_btn_Click(this);"
+                                        execType="editStrategy" sid="`+ sgy.id + `">编辑策略</div>
+                                    <div class="strategyListItem_right_btn"
+                                        onclick="javascript:void(0);onStrategyItem_btn_Click(this);"
+                                        execType="editCondition" sid="`+ sgy.id + `">编辑条件</div>
+                                    <div class="strategyListItem_right_btn_delete"
+                                        onclick="javascript:void(0);onStrategyItem_btn_Click(this);" execType="delete"
+                                        sid="`+ sgy.id + `">删除策略</div>
+                                    <button class="layui-btn layui-btn-sm" style="float:right;margin:10px 20px;"
+                                        lay-submit lay-filter="btn_forceUseage" id="btn_forceUseage"
+                                        sid="`+ sgy.id + `">强制即时生效</button>`;
+                    strategyItem_bottom = document.createElement("div");
+                    strategyItem_bottom.setAttribute("class", "strategyListItem_bottom");
+                    strategyItem.appendChild(strategyItem_left)
+                    strategyItem.appendChild(strategyItem_right)
+                    strategyItem.appendChild(strategyItem_bottom);
+                    baseNode.appendChild(strategyItem);
+                }
+
+            }
+
+
+
+        }
+
+
+
+    </script>
     <div class="layui-tab layui-tab-brief" lay-filter="mainTab">
         <ul class="layui-tab-title">
             <li lay-id="mUser">用户管理</li>
